Add database management features and improve login system
- Add database seeding functionality with sample products
- Improve admin database management page with seed/clear tools
- Add MongoDB connection testing script
- Improve login form with loading state and better error handling
- Add MongoDB connection error handling with helpful messages
- Add database management documentation (DATABASE-GUIDE.md)
- Add MongoDB setup guides (MongoDB Atlas and Local)
- Add helper scripts (seed-database, test-connection, create-admin)
- Add batch files for easy server and database management
- Auto redirect admin users to /admin after login

--- a/user/package.json
+++ b/user/package.json
@@ -7,7 +7,10 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "build": "npm run build:css",
-    "build:css": "tailwindcss -i ./src/css/input.css -o ./public/css/style.css --watch"
+    "build:css": "tailwindcss -i ./src/css/input.css -o ./public/css/style.css --watch",
+    "create-admin": "node scripts/create-admin.js",
+    "seed": "node scripts/seed-database.js",
+    "test-db": "node scripts/test-mongodb-connection.js"
   },
   "keywords": [
     "ecommerce",
